Port the old website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,173 @@
-Hello World
+<!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
+        <title>Wenhao Jia | Qualcomm Research</title>
+        <meta name="description" content="Wenhao Jia's Homepage at Qualcomm Research">
+        <meta name="author" content="Wenhao Jia">
+        <meta name="viewport" content="width=device-width">
+
+        <link rel="stylesheet" href="css/normalize.min.css">
+        <link rel="stylesheet" href="css/main.css">
+
+        <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+    </head>
+    <body>
+        <!--[if lt IE 7]>
+            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+        <![endif]-->
+
+        <div class="header-container">
+            <header class="wrapper clearfix">
+                <h1 class="title">Wenhao Jia</h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">About</a></li>
+                        <li><a href="wjia.pdf">Resume</a></li>
+                        <li><a href="#downloads">Downloads</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
+
+        <div class="main-container">
+            <div class="main wrapper clearfix">
+
+                <article>
+                        <h1>About Me</h1>
+                        <p>I am a senior engineer at <a href="https://www.qualcomm.com/invention/research/locations/silicon-valley">Qualcomm Research Silicon Valley</a>. Previously, I graduated from <a href="http://www.princeton.edu/">Princeton University</a> in 2014 with a Ph.D. degree in Electrical Engineering.</p>
+                        <h2>Research</h2>
+                        <p>My current research at Qualcomm investigates how to utilize the many heterogeneous processors in a mobile system using an asynchronous parallel software library called <a href="https://developer.qualcomm.com/mobile-development/maximize-hardware/parallel-computing-mare">MARE</a>.
+                        <p>Previously, during my Ph.D. study, I focused on making massively parallel processors such as graphics processing units (GPUs) easier to program and run faster. Toward that goal, I have worked on a few projects:<p>
+                        <ul>
+                            <li>To help GPU designers and users make tuning decisions, I apply statistical techniques such as <strong>linear regression</strong> and <strong>decision trees</strong> to model GPU hardware and software design spaces. The result is <a href="#downloads">two fully automated statistical tools</a> that efficiently sample designs, accurately capture performance/power trends using these samples, and output easy-to-understand models.</li>
+                            <li>To transparently improve the memory system performance for GPU users, I study and improve the utility of general-purpose, read-write caches in GPUs. I developed both <strong>microarchitectural units</strong> and <strong>compile-time algorithms</strong> to make GPU caches more effective without the need for user intervention.</li>
+                        </ul>
+                        <p>In general, I'm interested in studying and improving the power and performance of emerging computing platforms such as accelerators and mobile systems. I want to make these platforms perform well while being easy to use.</p> 
+                        <h2>Work Experience</h2>
+                        <ul class="standalone">
+                            <li>
+                                Qualcomm Inc., Santa Clara, CA, since October, 2014<br>
+                                <em>Senior Engineer</em><br>
+                                Researching and developing an asynchronous parallel software library
+                            </li>
+                            <li>
+                                Google Inc., Mountain View, CA, June&ndash;September, 2011<br>
+                                <em>Software Engineering Intern</em><br>
+                                Studied function-level program code multi-versioning in GCC
+                            </li>
+                            <li>
+                                IBM T.J. Watson Research Center, Hawthorne, NY, June&ndash;September, 2010<br>
+                                <em>Research Intern</em><br>
+                                Parallelized and optimized an MPI-based business analytics application
+                            </li>
+                        </ul>
+                        <h2>Education</h2>
+                        <ul class="standalone">
+                            <li>
+                                Princeton University, Department of Electrical Engineering<br>
+                                Ph.D., 2014<br>
+                                M.A., 2011
+                            </li>
+                            <li>
+                                Tsinghua University, Department of Electrical Engineering<br>
+                                B.S., 2008
+                            </li>
+                        </ul>
+                        <h2>Publications</h2>
+                        <ul class="standalone">
+                            <li>
+                                Analysis and Optimization Techniques for Massively Parallel Processors<br>
+                                <em><strong>Wenhao Jia</strong></em><br>
+                                Ph.D. Thesis, advised by <a href="http://www.princeton.edu/~mrm/">Prof. Margaret Martonosi</a> and <a href="www.mathcs.richmond.edu/~kshaw/">Prof. Kelly Shaw</a>
+                            </li>
+                            <li>
+                                MRPB: Memory Request Prioritization for Massively Parallel Processors <span class="noprint">[<a href="mrpb.pdf" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Publications', 'mrpb']);">pdf</a> | <a href="mrpb-talk.pdf" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Presentations', 'mrpb']);">talk</a>]</span><br>
+                                <em><strong>Wenhao Jia</strong>, Kelly A. Shaw, Margaret Martonosi</em><br>
+                                The 20th Int. Symp. on High Performance Computer Architecture (HPCA 2014)
+                            </li>
+                            <li>
+                                Starchart: Hardware and Software Optimization Using Recursive Partitioning Regression Trees <span class="noprint">[<a href="starchart.pdf" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Publications', 'starchart']);">pdf</a> | <a href="starchart-talk.pdf" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Presentations', 'starchart']);">talk</a>]</span><br>
+                                <em><strong>Wenhao Jia</strong>, Kelly A. Shaw, Margaret Martonosi</em><br>
+                                The 22nd Int. Conf. on Parallel Architectures and Compilation Techniques (PACT 2013)
+                            </li>
+                            <li>
+                                Characterizing and Improving the Use of Demand-Fetched Caches in GPUs <span class="noprint">[<a href="gpucache.pdf" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Publications', 'gpucache']);">pdf</a> | <a href="gpucache-talk.pdf" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Presentations', 'gpucache']);">talk</a>]</span><br>
+                                <em><strong>Wenhao Jia</strong>, Kelly A. Shaw, Margaret Martonosi</em><br>
+                                The 26th Int. Conf. on Supercomputing (ICS 2012)
+                            </li>
+                            <li>
+                                Stargazer: Automated Regression-Based GPU Design Space Exploration <span class="noprint">[<a href="stargazer.pdf" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Publications', 'stargazer']);">pdf</a> | <a href="stargazer-talk.pdf" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Presentations', 'stargazer']);">talk</a>]</span><br>
+                                <em><strong>Wenhao Jia</strong>, Kelly A. Shaw, Margaret Martonosi</em><br>
+                                The 2012 Int. Symp. on Performance Analysis of Systems and Software (ISPASS 2012)<br>
+                                [Best Paper Award Nomination]
+                            </li>
+                        </ul>
+                        <h2>Presentations and Posters</h2>
+                        <ul class="standalone">
+                            <li>
+                                Design Space Analysis for Heterogeneous Systems <span class="noprint">[<a href="heterogeneous.pdf" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Publications', 'heterogeneous']);">pdf</a>]</span><br>
+                                <em><strong>Wenhao Jia</strong>, Tae Jun Ham, Kelly A. Shaw, Margaret Martonosi</em><br>
+                                Intel Science &amp;Technology Center for Cloud Computing (ISTC-CC) Annual Retreat 2013
+                            </li>
+                            <li>
+                                Analyzing and Optimizing GPU Communication and Computation <span class="noprint">[<a href="gpu.pdf" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Publications', 'gpu']);">pdf</a>]</span><br>
+                                <em><strong>Wenhao Jia</strong>, Kelly A. Shaw, Margaret Martonosi</em><br>
+                                Intel Science &amp; Technology Center for Cloud Computing (ISTC-CC) Annual Retreat 2012
+                            </li>
+                            <li>
+                                A System-Level ISA and Its Applications to Energy-Performance-Reliability Scheduling and Scratchpad Allocation <span class="noprint">[<a href="scratchpad.pdf" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Publications', 'scratchpad']);">pdf</a>]</span><br>
+                                <em>Yavuz Yetim, <strong>Wenhao Jia</strong>, Margaret Martonosi, Sharad Malik, Kelly A. Shaw</em><br>
+                                Gigascale Systems Research Center (GSRC) Annual Symposium 2010
+                            </li>
+                            <li>
+                                System-level ISA (SISA) <span class="noprint">[<a href="sisa.pdf" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Publications', 'sisa']);">pdf</a>]</span><br>
+                                <em><strong>Wenhao Jia</strong>, Margaret Martonosi, Kelly A.   Shaw</em><br>
+                                Gigascale Systems Research Center (GSRC) Annual Symposium 2009
+                            </li>
+                        </ul>
+                        <h2><a name="downloads">Software Releases</a></h2>
+                        <ul class="standalone">
+                            <li><a href="stargazer">Stargazer</a>: A linear regression-based GPU design space exploration tool.</li>
+                            <li><a href="starchart">Starchart</a>: A regression tree-based GPU hardware/software optimization tool.</li>
+                            <li><a href="hotcrp-beamer">HotCRP Beamer Generator</a>: Scripts for generating program committee meeting slides from HotCRP.</li>
+                        </ul>
+                </article>
+
+                <aside class="clearfix">
+                    <div class="portrait">
+                        <img src="img/wjia.jpg" width="200" alt="This is a picture of me.">
+                    </div>
+                    <div class="contact">
+                        <h3>Contact Me</h3>
+                        <p>Mailing address: <br>3165 Kifer Rd, <br>Santa Clara, CA&nbsp;95051</p>
+                        <p>E-mail address: <br><a href="mailto:wjia@qualcomm.com">wjia@qualcomm.com</a></p>
+                    </div>
+                </aside>
+
+            </div> <!-- #main -->
+        </div> <!-- #main-container -->
+
+        <div class="footer-container">
+            <footer class="wrapper">
+                <h3>Designed responsively using <a href="http://html5boilerplate.com/">H5BP</a> <a href="http://www.initializr.com/">Initializr</a><br>Last updated in January 2015</h3>
+            </footer>
+        </div>
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+
+        <script src="js/main.js"></script>
+
+        <script>
+            var _gaq=[['_setAccount','UA-8144197-1'],['_trackPageview']];
+            (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+            g.src='//www.google-analytics.com/ga.js';
+            s.parentNode.insertBefore(g,s)}(document,'script'));
+        </script>
+    </body>
+</html>
