--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="main wrapper clearfix">
 
                 <article>
-                        <h1>About Me</h1>
+                        <h2>About Me</h2>
                         <p>I am a senior engineer at <a href="https://www.qualcomm.com/invention/research/locations/silicon-valley">Qualcomm Research Silicon Valley</a>. Previously, I graduated from <a href="http://www.princeton.edu/">Princeton University</a> in 2014 with a Ph.D. degree in Electrical Engineering.</p>
                         <h2>Research</h2>
                         <p>My current research at Qualcomm investigates how to utilize the many heterogeneous processors in a mobile system using an asynchronous parallel software library called <a href="https://developer.qualcomm.com/mobile-development/maximize-hardware/parallel-computing-mare">MARE</a>.
@@ -83,7 +83,7 @@
                             <li>
                                 Analysis and Optimization Techniques for Massively Parallel Processors<br>
                                 <em><strong>Wenhao Jia</strong></em><br>
-                                Ph.D. Thesis, advised by <a href="http://www.princeton.edu/~mrm/">Prof. Margaret Martonosi</a> and <a href="www.mathcs.richmond.edu/~kshaw/">Prof. Kelly Shaw</a>
+                                Ph.D. Thesis, advised by <a href="http://www.princeton.edu/~mrm/">Prof. Margaret Martonosi</a> and <a href="http://www.mathcs.richmond.edu/~kshaw/">Prof. Kelly A. Shaw</a>
                             </li>
                             <li>
                                 MRPB: Memory Request Prioritization for Massively Parallel Processors <span class="noprint">[<a href="mrpb.pdf" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Publications', 'mrpb']);">pdf</a> | <a href="mrpb-talk.pdf" onClick="_gaq.push(['_trackEvent', 'Downloads', 'Presentations', 'mrpb']);">talk</a>]</span><br>
@@ -130,7 +130,7 @@
                                 Gigascale Systems Research Center (GSRC) Annual Symposium 2009
                             </li>
                         </ul>
-                        <h2><a name="downloads">Software Releases</a></h2>
+                        <h2 id="downloads">Software Releases</h2>
                         <ul class="standalone">
                             <li><a href="stargazer">Stargazer</a>: A linear regression-based GPU design space exploration tool.</li>
                             <li><a href="starchart">Starchart</a>: A regression tree-based GPU hardware/software optimization tool.</li>
