--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <head>
         <meta charset="utf-8">
         <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><![endif]-->
-        <title>Wenhao Jia | Qualcomm Research</title>
-        <meta name="description" content="Wenhao Jia's Homepage at Qualcomm Research">
+        <title>Wenhao Jia's Personal Website</title>
+        <meta name="description" content="Dr. Wenhao Jia's personal website">
         <meta name="author" content="Wenhao Jia">
         <meta name="viewport" content="width=device-width">
 
@@ -39,15 +39,15 @@
 
                 <article>
                         <h2>About Me</h2>
-                        <p>I am a senior engineer at <a href="https://www.qualcomm.com/invention/research/locations/silicon-valley">Qualcomm Research Silicon Valley</a>. Previously, I graduated from <a href="http://www.princeton.edu/">Princeton University</a> in 2014 with a Ph.D. degree in Electrical Engineering.</p>
+                        <p>I am a Systems Engineer at <a href="https://scaledinference.com/">Scaled Inference</a>, a company that aims to empower people through intelligent computing. Previously, I was a researcher at <a href="https://www.qualcomm.com/invention/research/locations/silicon-valley">Qualcomm Research Silicon Valley</a>. Prior to that, I graduated from <a href="http://www.princeton.edu/">Princeton University</a> in 2014 with a Ph.D. degree in Electrical Engineering.</p>
                         <h2>Research</h2>
-                        <p>My current research at Qualcomm investigates how to utilize the many heterogeneous processors in a mobile system using an asynchronous parallel software library called <a href="https://developer.qualcomm.com/mobile-development/maximize-hardware/parallel-computing-mare">MARE</a>.
+                        <p>At Qualcomm, I investigated how to utilize the many heterogeneous processors in a mobile system using an asynchronous parallel software library called <a href="https://developer.qualcomm.com/mobile-development/maximize-hardware/parallel-computing-mare">MARE</a>.
                         <p>Previously, during my Ph.D. study, I focused on making massively parallel processors such as graphics processing units (GPUs) easier to program and run faster. Toward that goal, I have worked on a few projects:<p>
                         <ul>
                             <li>To help GPU designers and users make tuning decisions, I apply statistical techniques such as <strong>linear regression</strong> and <strong>decision trees</strong> to model GPU hardware and software design spaces. The result is <a href="#downloads">two fully automated statistical tools</a> that efficiently sample designs, accurately capture performance/power trends using these samples, and output easy-to-understand models.</li>
                             <li>To transparently improve the memory system performance for GPU users, I study and improve the utility of general-purpose, read-write caches in GPUs. I developed both <strong>microarchitectural units</strong> and <strong>compile-time algorithms</strong> to make GPU caches more effective without the need for user intervention.</li>
                         </ul>
-                        <p>In general, I'm interested in studying and improving the power and performance of emerging computing platforms such as accelerators and mobile systems. I want to make these platforms perform well while being easy to use.</p> 
+                        <p>In general, I'm interested in studying and improving the power and performance of emerging computing platforms such as accelerators, mobile systems, and distributed systems. I want to make these platforms perform well while being easy to use.</p>
                         <h2>Work Experience</h2>
                         <ul class="standalone">
                             <li>
@@ -80,6 +80,11 @@
                         </ul>
                         <h2>Publications</h2>
                         <ul class="standalone">
+                            <li>
+                                GPU Performance and Power Tuning Using Regression Trees<br>
+                                <em><strong>Wenhao Jia</strong>, Elba Garza, Kelly A. Shaw, Margaret Martonosi</em><br>
+                                Volume 12, Issue 2, Ariticle 13, ACM Transactions on Architecture and Code Optimization (TACO)
+                            </li>
                             <li>
                                 Analysis and Optimization Techniques for Massively Parallel Processors<br>
                                 <em><strong>Wenhao Jia</strong></em><br>
@@ -144,8 +149,7 @@
                     </div>
                     <div class="contact">
                         <h3>Contact Me</h3>
-                        <p>Mailing address: <br>3165 Kifer Rd, <br>Santa Clara, CA&nbsp;95051</p>
-                        <p>E-mail address: <br><a href="mailto:wjia@qualcomm.com">wjia@qualcomm.com</a></p>
+                        <p>E-mail address: <br><a href="mailto:jiawenhao@gmail.com">jiawenhao@gmail.com</a></p>
                     </div>
                 </aside>
 
