Update work experiences and fix footer

--- a/index.html
+++ b/index.html
@@ -51,9 +51,14 @@
                         <h2>Work Experience</h2>
                         <ul class="standalone">
                             <li>
-                                Qualcomm Inc., Santa Clara, CA, since October, 2014<br>
+                                Scaled Inference Inc., Palo Alto, CA, since October, 2015<br>
+                                <em>Systems Engineer</em><br>
+                                Developing a machine learning online service platform
+                            </li>
+                            <li>
+                                Qualcomm Inc., Santa Clara, CA, October, 2014&ndash;October, 2015<br>
                                 <em>Senior Engineer</em><br>
-                                Researching and developing an asynchronous parallel software library
+                                Researched and developed an asynchronous parallel software library
                             </li>
                             <li>
                                 Google Inc., Mountain View, CA, June&ndash;September, 2011<br>
@@ -158,7 +163,7 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h3>Designed responsively using <a href="http://html5boilerplate.com/">H5BP</a> <a href="http://www.initializr.com/">Initializr</a><br>Last updated in January 2015</h3>
+                <h3>Designed responsively using <a href="http://html5boilerplate.com/">H5BP</a> <a href="http://www.initializr.com/">Initializr</a><br>Last updated in December 2015</h3>
             </footer>
         </div>
 
