--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <nav>
                     <ul>
                         <li><a href="index.html">About</a></li>
-                        <li><a href="mailto:hello@jiawenhao.com">Contact</a></li>
+                        <li><a href="mailto:hello@jiawenhao.com">Email</a></li>
                         <li><a href="#downloads">Downloads</a></li>
                     </ul>
                 </nav>
@@ -153,7 +153,8 @@
                         <img src="img/wjia.jpg" width="200" alt="This is a picture of me.">
                     </div>
                     <div class="contact">
-                        <p><a href="mailto:hello@jiawenhao.com">Email Me</a></p>
+                        <h3>Contact Me</h3>
+                        <p>Email: <a href="mailto:hello@jiawenhao.com">hello@jiawenhao.com</a></p>
                     </div>
                 </aside>
 
